--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "tests": "mocha app/src/test/index.js"
+    "tests": "mocha app/src/test/index.js",
+    "app": "node index.js"
   },
   "author": "Luiz Henrique Silva Jesus",
   "license": "MIT",
